sent email success

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -10,7 +10,7 @@
             <div><label> Passport : <input type="text" name="passport" placeholder="Passport number"/> </label></div>
             <div><label> Phone : <input type="text" name="phone" placeholder="Phone number"/> </label></div>
             <div><label> Email : <input type="email" name="email" placeholder="some@some.net" /> </label></div>
-            <div><label> Files : <input type="file" name="files" accept="image/jpeg,image/png,image/jpg" multiple /> </label></div>
+            <!--<div><label> Files : <input type="file" name="files" accept="image/jpeg,image/png,image/jpg" multiple /> </label></div>-->
             <input type="hidden" name="_csrf" value="${_csrf.token}}">
             <div><input type="submit" value="Add customer"/></div>
         </form>
