send all letters

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -8,8 +8,9 @@
             <div><label> Surname : <input type="text" name="surname" placeholder="Surname"/> </label></div>
             <div><label> Birthday : <input type="date" name="birthday" placeholder="Birthday"/> </label></div>
             <div><label> Passport : <input type="text" name="passport" placeholder="Passport number"/> </label></div>
-            <div><label> Phone : <input type="text" name="phone" placeholder="Phone number"/> </label></div>
-            <div><label> Email : <input type="email" name="email" placeholder="some@some.net" /> </label></div>
+            <div><label> Phone : <input type="tel" name="phone" id="phone" placeholder="Phone number"/> </label></div>
+            <div><label> Email : <input type="email" name="email" id="email" placeholder="some@some.net" /> </label></div>
+            <div><label> Password : <input type="password" name="password" placeholder="password" /> </label></div>
             <!--<div><label> Files : <input type="file" name="files" accept="image/jpeg,image/png,image/jpg" multiple /> </label></div>-->
             <input type="hidden" name="_csrf" value="${_csrf.token}}">
             <div><input type="submit" value="Add customer"/></div>
@@ -26,6 +27,7 @@
         <th>Passport</th>
         <th>Phone</th>
         <th>Email</th>
+        <th>Password</th>
         <th>Files</th>
         <th>Control</th>
     </thead>
@@ -40,14 +42,17 @@
             <td>{{passport}}</td>
             <td>{{phone}}</td>
             <td>{{email}}</td>
-            <td>
-
-            </td>
+            <td>{{password}}</td>
+            <td></td>
             <td><i class="edit"></i><i class="delete"></i></td>
         </tr>
     {{/customers}}
     </tbody>
 </table>
 
+
+<form action="/sendAll" method="post">
+    <div><button type="submit" >Send All</button></div>
+</form>
 </body>
 </html>
