added input for code

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -52,6 +52,7 @@
 
 
 <form action="/sendAll" method="post">
+    <div><input type="text" name="code" id="code" placeholder="code here"></div>
     <div><button type="submit" >Send All</button></div>
 </form>
 </body>
